fix vertical-align

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -67,6 +67,7 @@
 @media (max-width: $mobile-width) {
   .button--blue-small {
     display: inline-block;
+    vertical-align: middle;
   }
 
   .button--blue-big {
